--- a/index.html
+++ b/index.html
@@ -83,25 +83,105 @@
 	<section>
 		<div class="container mx-auto lg:px-6 px-4 lg:py-12 py-4 bg-gray-50 text-gray-800  lg:text-left  mt-4 lg:mt-0">
 			<div class="mt-12 lg:mt-0 ">
-				<h1 class="lg:text-4xl font-bold capitalize text-lg pb-20">
+				<h1 class="lg:text-4xl font-bold capitalize text-lg pb-4 px-12">
 					Empowering Lives, Transforming Communities!
 				</h1>
-			<p class="mx-auto text-justify text-lg mb-6 p-20">
-				The story of our organisation, Sachcha Prayas Sanstha is one that is rooted in the wide-spread displacement caused by the construction of the Bargi dam in Jabalpur, Maharashtra. People from over 184 villages were uprooted and displaced, causing a loss of homes and livelihood. 
+				<p class="mx-auto text-justify text-lg mb-6 px-12 ">
+					The story of our organisation, Sachcha Prayas Sanstha is one that is rooted in the wide-spread
+					displacement caused by the construction of the Bargi dam in Jabalpur, Maharashtra. People from over
+					184 villages were uprooted and displaced, causing a loss of homes and livelihood.
 
-				Our founder, Parvez Khan’s family is one such family that were displaced and put through the turmoil of rebuilding their lives in the name of development. Drawing inspiration from the thousands of affected families, including his own, Parvez committed his life to empower marginalised communities. This paired with his years of journalistic pursuits in the area, highlighting the struggles of the rural people, paved the foundation for the organisation. 
+					Our founder, Parvez Khan’s family is one such family that were displaced and put through the turmoil
+					of rebuilding their lives in the name of development. Drawing inspiration from the thousands of
+					affected families, including his own, Parvez committed his life to empower marginalised communities.
+					This paired with his years of journalistic pursuits in the area, highlighting the struggles of the
+					rural people, paved the foundation for the organisation.
 
-				This collective experience ultimately led to the establishment of Sachcha Prayas Sanstha in collaboration with Neha Sharma, a fashion designer. On November 17th, 2009, our NGO was officially established under the Society Act.
+					This collective experience ultimately led to the establishment of Sachcha Prayas Sanstha in
+					collaboration with Neha Sharma, a fashion designer. On November 17th, 2009, our NGO was officially
+					established under the Society Act.
 
-				Our journey began in Harduli-Mankhedi (Harduli-Bargi Gram Panchayat), Jabalpur district, Madhya Pradesh. This area witnessed significant displacement  of marginalised communities due to the Bargi Dam construction. In the beginning, our main goal was to empower rural women, especially those in distress, through skill-building, that could help them live dignified and financially independent lives. These women often face challenges and are denied basic rights, even though they shoulder most of the responsibilities of their households and farms. Currently, we have expanded our organisation's capabilities to simultaneously focus on child rights, education, legal aid and health. 
+					Our journey began in Harduli-Mankhedi (Harduli-Bargi Gram Panchayat), Jabalpur district, Madhya
+					Pradesh. This area witnessed significant displacement of marginalised communities due to the Bargi
+					Dam construction. In the beginning, our main goal was to empower rural women, especially those in
+					distress, through skill-building, that could help them live dignified and financially independent
+					lives. These women often face challenges and are denied basic rights, even though they shoulder most
+					of the responsibilities of their households and farms. Currently, we have expanded our
+					organisation's capabilities to simultaneously focus on child rights, education, legal aid and
+					health.
 
-				We understand that empowerment goes beyond words – it's about skills that translate into self-reliance. Our focus has been to empower women with skills such as machine tailoring, hand embroidery, mehndi art, and beauty parlour techniques. By providing these comprehensive skill-set training along with encouraging traditional forms occupations, we enable women to contribute to their households and communities positively.
+					We understand that empowerment goes beyond words – it's about skills that translate into
+					self-reliance. Our focus has been to empower women with skills such as machine tailoring, hand
+					embroidery, mehndi art, and beauty parlour techniques. By providing these comprehensive skill-set
+					training along with encouraging traditional forms occupations, we enable women to contribute to
+					their households and communities positively.
 
-				Our core purpose is to create a better future for those often left behind, particularly rural women and children. Our biggest aspiration is to empower displaced families, adivasis, SC, ST, and backward-class individuals by providing them with valuable skills sets and opportunities.
-				
-			</p>
+					Our core purpose is to create a better future for those often left behind, particularly rural women
+					and children. Our biggest aspiration is to empower displaced families, adivasis, SC, ST, and
+					backward-class individuals by providing them with valuable skills sets and opportunities.
+
+				</p>
+			</div>
+	</section>
+
+
+	<!-- mission vision section   -->
+	<section class="flex justify-center">
+		<div class=" container max-w-8xl  lg:px-16 px-4 py-12">
+
+			<dl class="grid  grid-cols-1 gap-x-8 gap-y-10  md:grid-cols-2 lg:grid-cols-3">
+				<!-- Mission -->
+				<div class=" p-4  xl:p-8 bg-gray-200 rounded-lg shadow-xl">
+					<img class="mx-auto w-20 flex items-center justify-center " src="public/image/icon/mission.png"
+						alt="">
+					<dt class="font-semibold leading-7">
+						<p class="p-2 text-3xl font-bold tracking-tight  sm:text-2xl  text-gray-900 text-center">Mission
+						</p>
+					</dt>
+					<dd class="mt-2 text-justify leading-7 text-gray-700 ">Our mission is to empower marginalised
+						segments of society, with a special emphasis on women and children. We are dedicated to helping
+						them access knowledge and information, equipping them to lead empowered and dignified lives.
+					</dd>
+				</div>
+
+				<!-- vision -->
+				<div class=" p-4  xl:p-8 bg-gray-200 rounded-lg shadow-xl">
+					<img class="mx-auto w-20 flex items-center justify-center " src="public/image/icon/vision.png"
+						alt="">
+
+					<dt class=" font-semibold leading-7 ">
+						<p class="p-2 text-3xl font-bold tracking-tight  sm:text-2xl  text-gray-900 text-center">Vision
+						</p>
+					</dt>
+					<dd class="mt-2 text-justify leading-7 text-gray-700 ">We envision a society where every individual,
+						with a special focus on women and children, experiences a life of dignity, enjoying equitable
+						access to essential services encompassing health, education, and basic needs.
+
+					</dd>
+				</div>
+
+				<!-- Objective -->
+				<div class=" p-4  xl:p-8 bg-gray-200 rounded-lg shadow-xl">
+					<img class="mx-auto w-20 flex items-center justify-center " src="public/image/icon/goal.png" alt="">
+
+					<dt class=" font-semibold leading-7 ">
+						<p class="p-2 text-3xl font-bold tracking-tight  sm:text-2xl  text-gray-900 text-center">
+							Objective
+						</p>
+					</dt>
+					<dd class="mt-2 text-justify leading-7 text-gray-700 ">
+						Our project aspires to cultivate empowered women, girls and children through the promotion of
+						income-generating skills, raising awareness, and improving access to basic rights. Our ultimate
+						goal is to nurture a sense of environmental security, enhance overall health, and promote legal
+						literacy. Through these endeavours, we aim to contribute to the creation of a community that is
+						both sustainable and empowered.
+					</dd>
+				</div>
+
+			</dl>
 		</div>
 	</section>
+	<!--mission end  -->
 
 
 	<!-- donate button -->
@@ -113,9 +193,12 @@
 			</a>
 		</div>
 	</section>
+	<!-- donate button end -->
 
+
+	<!-- image section -->
 	<div class="container mx-auto">
-		<div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-4">
+		<div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-8 py-12 px-16">
 			<div class="group relative">
 				<div
 					class="invisible group-hover:visible absolute inset-0 bg-blue-500 text-white flex justify-center items-center transition-all duration-300">
@@ -178,62 +261,7 @@
 			</div>
 		</div>
 	</div>
-	<!-- Main body end  -->
-
-
-	<!-- mission vision section   -->
-	<section class="flex justify-center">
-		<div class=" container max-w-8xl  lg:px-6 px-4 py-12">
-
-			<dl class="grid  grid-cols-1 gap-x-8 gap-y-10  md:grid-cols-2 lg:grid-cols-3">
-				<!-- Mission -->
-				<div class=" p-4  xl:p-8 bg-gray-200 rounded-lg shadow-xl">
-					<img class="mx-auto w-20 flex items-center justify-center " src="public/image/icon/mission.png"
-						alt="">
-					<dt class="font-semibold leading-7">
-						<p class="p-2 text-3xl font-bold tracking-tight  sm:text-2xl  text-gray-900 text-center">Mission
-						</p>
-					</dt>
-					<dd class="mt-2 text-justify leading-7 text-gray-700 ">To empower the marginalised section of
-						society especially women and children and ensure their reach to access knowledge and information
-						which helps to lead a dignified life.</dd>
-				</div>
-
-				<!-- vision -->
-				<div class=" p-4  xl:p-8 bg-gray-200 rounded-lg shadow-xl">
-					<img class="mx-auto w-20 flex items-center justify-center " src="public/image/icon/vision.png"
-						alt="">
-
-					<dt class=" font-semibold leading-7 ">
-						<p class="p-2 text-3xl font-bold tracking-tight  sm:text-2xl  text-gray-900 text-center">Vision
-						</p>
-					</dt>
-					<dd class="mt-2 text-justify leading-7 text-gray-700 ">To create a society where every citizen,
-						especially women and children, lives with dignity and has equal access to services related to
-						health, education, and other basic needs services.
-					</dd>
-				</div>
-
-				<!-- Objective -->
-				<div class=" p-4  xl:p-8 bg-gray-200 rounded-lg shadow-xl">
-					<img class="mx-auto w-20 flex items-center justify-center " src="public/image/icon/goal.png" alt="">
-
-					<dt class=" font-semibold leading-7 ">
-						<p class="p-2 text-3xl font-bold tracking-tight  sm:text-2xl  text-gray-900 text-center">
-							Objective
-						</p>
-					</dt>
-					<dd class="mt-2 text-justify leading-7 text-gray-700 ">
-						This project aims to empower women and girls by promoting income generation skills, raising
-						awareness, and improving access to rights. It also focuses on environmental security, health,
-						and legal awareness to build a sustainable and empowered community.</dd>
-				</div>
-
-			</dl>
-		</div>
-	</section>
-	<!--mission end  -->
-
+	<!-- image section end-->
 
 
 
@@ -241,7 +269,7 @@
 	<div class="border-4 border-orange-400 border-back-color"></div>
 
 	<footer class="bg-white p-4 text-white" aria-labelledby="footer-heading">
-		<div class="mx-auto max-w-7xl px-6 pb-4 sm:pt-24 lg:px-8 pt-2 lg:pt-12 text-black">
+		<div class="mx-auto max-w-7xl px-6 pb-4 sm:pt-24 lg:px-16 pt-2 lg:pt-12 text-black">
 			<div class="">
 				<div class="flex flex-col lg:flex-row justify-between lg:gap-20 gap-12">
 
