--- a/about.html
+++ b/about.html
@@ -111,9 +111,9 @@
 
     <!-- body -->
     <section>
-        <div class="container mx-auto flex flex-col lg:flex-row justify-center items-center my-20">
+        <div class="container mx-auto flex flex-col lg:flex-row justify-center items-center my-20 px-12">
             <div class="lg:w-6/12 w-full">
-                <img class=" px-8" src="public/image/team/image 109.png" alt="">
+                <img class=" p-4" src="public/image/team/image 109.png" alt="">
             </div>
 
             <div class="w-10/12 lg:px-8 text-justify py-4 lg:py-0  pt-8">
@@ -167,7 +167,7 @@
 
     <footer class="bg-white p-4 text-white" aria-labelledby="footer-heading">
         <!-- <h2 id="footer-heading" class="sr-only">Footer</h2> -->
-        <div class="mx-auto max-w-7xl px-6 pb-4 sm:pt-24 lg:px-8 pt-2 lg:pt-12 text-black">
+        <div class="mx-auto max-w-7xl px-6 pb-4 sm:pt-24 lg:px-16 pt-2 lg:pt-12 text-black">
             <div class="">
                 <div class="flex flex-col lg:flex-row justify-between lg:gap-20 gap-12">
 
