home page update

--- a/index.html
+++ b/index.html
@@ -182,11 +182,35 @@
 		</div>
 	</section>
 	<!--mission end  -->
+	<div class="container mx-auto p-8 text-center border-2 shadow-md">
+        <h1 class="text-3xl font-bold mb-6">Our Partners</h1>
+        <div class="flex justify-center space-x-6">
+            <!-- Partner Logo 1 -->
+            <div class="bg-white p-4 shadow-md">
+                <img src="partner1-logo.png" alt="Partner 1 Logo" class="mx-auto h-28" />
+            </div>
+
+            <!-- Partner Logo 2 -->
+            <div class="bg-white p-4 shadow-md">
+                <img src="partner2-logo.png" alt="Partner 2 Logo" class="mx-auto h-28" />
+            </div>
+
+            <!-- Partner Logo 3 -->
+            <div class="bg-white p-4 shadow-md">
+                <img src="partner3-logo.png" alt="Partner 3 Logo" class="mx-auto h-24" />
+            </div>
+
+            <!-- Partner Logo 4 -->
+            <div class="bg-white p-4 shadow-md">
+                <img src="partner4-logo.png" alt="Partner 4 Logo" class="mx-auto h-24" />
+            </div>
+        </div>
+    </div>
 
 
 	<!-- donate button -->
 	<section>
-		<div class="mx-auto flex px-4 py-2 donate w-56 my-5 shadow-xl rounded-lg">
+		<div class="mx-auto flex px-2 py-2 donate w-56 my-5 shadow-xl rounded-lg">
 			<a href="donate.html" class="flex">
 				<h1 class="text-3xl text-white font-bold flex items-center px-2">Donate</h1>
 				<img class="w-20 h-16 px-2" src="public/image/donate-logo.png" alt="">
@@ -198,11 +222,11 @@
 
 	<!-- image section -->
 	<div class="container mx-auto">
-		<div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-8 py-12 px-16">
+		<div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-8 py-12 px-4">
 			<div class="group relative">
 				<div
 					class="invisible group-hover:visible absolute inset-0 bg-blue-500 text-white flex justify-center items-center transition-all duration-300">
-					hi there</div>
+					Conversation with Children on Children's Issues under the Democracy Program</div>
 
 
 				<img class="w-full" src="public/image/gallery/carousel1.png" alt="THEMES OF INTEREST" loading="lazy">
@@ -212,7 +236,7 @@
 			<div class="group relative">
 				<div
 					class="invisible group-hover:visible absolute inset-0 bg-blue-500 text-white flex justify-center items-center transition-all duration-300">
-					hi there</div>
+					Organizing Legal Literacy Camp for Women</div>
 
 
 				<img class="w-full" src="public/image/gallery/carousel2.png" alt="THEMES OF INTEREST" loading="lazy">
@@ -222,7 +246,7 @@
 			<div class="group relative">
 				<div
 					class="invisible group-hover:visible absolute inset-0 bg-blue-500 text-white flex justify-center items-center transition-all duration-300">
-					hi there</div>
+					Free Blood Grouping Camp for Adolescent Children in the Institution</div>
 
 
 				<img class="w-full" src="public/image/gallery/carousel3.png" alt="THEMES OF INTEREST" loading="lazy">
