--- a/our-work.html
+++ b/our-work.html
@@ -117,19 +117,12 @@
 
 					<div class="mt-12 lg:mt-0">
 						<h1 class="lg:text-4xl font-bold text-color capitalize  p-2 text-lg ">
-							Education
+							Education: Advocating for Child Rights
 						</h1>
 						
 						<p class="max-w-2xl font-medium text-justify lg:text-lg  lg:px-4">
-							Lorem ipsum, dolor sit amet consectetur adipisicing elit. Fugiat eius aut dolorem quas
-							consectetur laborum maxime ex iusto. Possimus libero accusamus officiis sed animi mollitia,
-							hic officia nostrum veniam placeat.
-							Lorem ipsum, dolor sit amet consectetur adipisicing elit. Fugiat eius aut dolorem quas
-							consectetur laborum maxime ex iusto. Possimus libero accusamus officiis sed animi mollitia,
-							hic officia nostrum veniam placeat.Lorem ipsum, dolor sit amet consectetur adipisicing elit.
-							Fugiat eius aut dolorem quas
-							consectetur laborum maxime ex iusto. Possimus libero accusamus officiis sed animi mollitia,
-							hic officia nostrum veniam placeat.
+							Sachcha Prayas Sanstha recognizes the importance of child rights advocacy. We strive to create a positive atmosphere for child rights discussions at the Gram Panchayat level. Our organisation collaborates with various government and non-government entities, such as the Madhya Pradesh State Legal Services Authority, Child Rights Observatory Madhya Pradesh Bhopal, and Vikas Samvad Samiti Bhopal, to ensure the protection and promotion of children's rights. By working at the grassroots level and engaging with communities, we aim to address the unique challenges faced by children in our areas of operation.
+
 						</p>
 					</div>
 
@@ -180,19 +173,13 @@
 
 					<div class="mt-12 lg:mt-0">
 						<h1 class="lg:text-4xl font-bold text-color capitalize  p-2 text-lg ">
-							Livelihood
+							Livelihood: Empowering Women Through Skills At Sachcha Prayas Sanstha 
+
 						</h1>
 
 						<p class="max-w-2xl font-medium text-justify lg:text-lg  lg:px-4">
-							Lorem ipsum, dolor sit amet consectetur adipisicing elit. Fugiat eius aut dolorem quas
-							consectetur laborum maxime ex iusto. Possimus libero accusamus officiis sed animi mollitia,
-							hic officia nostrum veniam placeat.
-							Lorem ipsum, dolor sit amet consectetur adipisicing elit. Fugiat eius aut dolorem quas
-							consectetur laborum maxime ex iusto. Possimus libero accusamus officiis sed animi mollitia,
-							hic officia nostrum veniam placeat.Lorem ipsum, dolor sit amet consectetur adipisicing elit.
-							Fugiat eius aut dolorem quas
-							consectetur laborum maxime ex iusto. Possimus libero accusamus officiis sed animi mollitia,
-							hic officia nostrum veniam placeat.
+							We began our journey with a focus on improving the lives of rural women. Witnessing the challenges faced by displaced families due to the Bargi Dam construction, our founder, Mr. Parvez Khan, initiated a training centre for women in Gram Panchayat Hardauli Bargi Nagar. Through courses in sewing, embroidery, and beauty skills, we aimed to provide women with income-generating skills. Over time, we partnered with various organisations, including the Women and Child Development Department and YMCA Sanstha Jabalpur, to enhance the livelihoods of women in the community. Our efforts have enabled women to become financially independent and contribute to their households' economic well-being.
+
 						</p>
 					</div>
 
