--- a/index.html
+++ b/index.html
@@ -81,12 +81,12 @@
 
 	<!-- Main body  -->
 	<section>
-		<div class="container mx-auto lg:px-6 px-4 lg:py-12 py-4 bg-gray-50 text-gray-800  lg:text-left  mt-4 lg:mt-0">
+		<div class="container mx-auto lg:px-6 px-6 lg:py-12 py-4 bg-gray-50 text-gray-800  lg:text-left  mt-4 lg:mt-0">
 			<div class="mt-12 lg:mt-0 ">
-				<h1 class="lg:text-4xl font-bold capitalize text-lg pb-4 px-12">
+				<h1 class="lg:text-4xl font-bold capitalize text-lg pb-4 lg:px-12">
 					Empowering Lives, Transforming Communities!
 				</h1>
-				<p class="mx-auto text-justify text-lg mb-6 px-12 ">
+				<p class="mx-auto text-justify mb-6 lg:px-12  ">
 					The story of our organisation, Sachcha Prayas Sanstha is one that is rooted in the wide-spread
 					displacement caused by the construction of the Bargi dam in Jabalpur, Maharashtra. People from over
 					184 villages were uprooted and displaced, causing a loss of homes and livelihood.
@@ -182,30 +182,47 @@
 		</div>
 	</section>
 	<!--mission end  -->
-	<div class="container mx-auto p-8 text-center border-2 shadow-md">
-        <h1 class="text-3xl font-bold mb-6">Our Partners</h1>
-        <div class="flex justify-center space-x-6">
-            <!-- Partner Logo 1 -->
-            <div class="bg-white p-4 shadow-md">
-                <img src="partner1-logo.png" alt="Partner 1 Logo" class="mx-auto h-28" />
-            </div>
 
-            <!-- Partner Logo 2 -->
-            <div class="bg-white p-4 shadow-md">
-                <img src="partner2-logo.png" alt="Partner 2 Logo" class="mx-auto h-28" />
-            </div>
+	<!-- partners -->
+	<div class="container mx-auto p-8 text-center border-2 shadow-md w-max">
+		<h1 class="text-3xl font-bold mb-6">Our Partners</h1>
+		<div class="grid  lg:grid-cols-6 sm:grid-cols-3 gap-8 ">
+			<!-- Partner Logo 1 -->
+			<div class="bg-white p-4 shadow-md">
+				<img src="partner1-logo.png" alt="Partner 1 Logo" class="mx-auto h-28" />
+			</div>
 
-            <!-- Partner Logo 3 -->
-            <div class="bg-white p-4 shadow-md">
-                <img src="partner3-logo.png" alt="Partner 3 Logo" class="mx-auto h-24" />
-            </div>
+			<!-- Partner Logo 2 -->
+			<div class="bg-white p-4 shadow-md">
+				<img src="partner2-logo.png" alt="Partner 2 Logo" class="mx-auto h-28" />
+			</div>
 
-            <!-- Partner Logo 4 -->
-            <div class="bg-white p-4 shadow-md">
-                <img src="partner4-logo.png" alt="Partner 4 Logo" class="mx-auto h-24" />
-            </div>
-        </div>
-    </div>
+
+			<!-- Partner Logo 3 -->
+			<div class="bg-white p-4 shadow-md">
+				<img src="partner1-logo.png" alt="Partner 1 Logo" class="mx-auto h-28" />
+			</div>
+
+			<!-- Partner Logo 4 -->
+			<div class="bg-white p-4 shadow-md">
+				<img src="partner2-logo.png" alt="Partner 2 Logo" class="mx-auto h-28" />
+			</div>
+
+
+			<!-- Partner Logo 5 -->
+			<div class="bg-white p-4 shadow-md">
+				<img src="partner1-logo.png" alt="Partner 1 Logo" class="mx-auto h-28" />
+			</div>
+
+			<!-- Partner Logo 6 -->
+			<div class="bg-white p-4 shadow-md">
+				<img src="partner2-logo.png" alt="Partner 2 Logo" class="mx-auto h-28" />
+			</div>
+
+		</div>
+	</div>
+	<!-- partners end -->
+
 
 
 	<!-- donate button -->
@@ -221,11 +238,11 @@
 
 
 	<!-- image section -->
-	<div class="container mx-auto">
-		<div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-8 py-12 px-4">
+	<div class="container mx-auto ">
+		<div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-8 py-12 lg:px-16 px-4">
 			<div class="group relative">
 				<div
-					class="invisible group-hover:visible absolute inset-0 bg-blue-500 text-white flex justify-center items-center transition-all duration-300">
+					class="invisible group-hover:visible absolute inset-0 bg-blue-500 text-white flex justify-center items-center transition-all duration-300 px-6">
 					Conversation with Children on Children's Issues under the Democracy Program</div>
 
 
@@ -235,7 +252,7 @@
 			</div>
 			<div class="group relative">
 				<div
-					class="invisible group-hover:visible absolute inset-0 bg-blue-500 text-white flex justify-center items-center transition-all duration-300">
+					class="invisible group-hover:visible absolute inset-0 bg-blue-500 text-white flex justify-center items-center transition-all duration-300 px-6">
 					Organizing Legal Literacy Camp for Women</div>
 
 
@@ -245,15 +262,15 @@
 			</div>
 			<div class="group relative">
 				<div
-					class="invisible group-hover:visible absolute inset-0 bg-blue-500 text-white flex justify-center items-center transition-all duration-300">
+					class="invisible group-hover:visible absolute inset-0 bg-blue-500 text-white flex justify-center items-center transition-all duration-300 px-6">
 					Free Blood Grouping Camp for Adolescent Children in the Institution</div>
 
 
-				<img class="w-full" src="public/image/gallery/carousel3.png" alt="THEMES OF INTEREST" loading="lazy">					
+				<img class="w-full" src="public/image/gallery/carousel3.png" alt="THEMES OF INTEREST" loading="lazy">
 			</div>
 			<div class="group relative">
 				<div
-					class="invisible group-hover:visible absolute inset-0 bg-blue-500 text-white flex justify-center items-center transition-all duration-300">
+					class="invisible group-hover:visible absolute inset-0 bg-blue-500 text-white flex justify-center items-center transition-all duration-300 px-6">
 					hi there</div>
 
 
@@ -263,7 +280,7 @@
 			</div>
 			<div class="group relative">
 				<div
-					class="invisible group-hover:visible absolute inset-0 bg-blue-500 text-white flex justify-center items-center transition-all duration-300">
+					class="invisible group-hover:visible absolute inset-0 bg-blue-500 text-white flex justify-center items-center transition-all duration-300 px-6">
 					hi there</div>
 
 
@@ -273,7 +290,7 @@
 			</div>
 			<div class="group relative">
 				<div
-					class="invisible group-hover:visible absolute inset-0 bg-blue-500 text-white flex justify-center items-center transition-all duration-300">
+					class="invisible group-hover:visible absolute inset-0 bg-blue-500 text-white flex justify-center items-center transition-all duration-300 px-6">
 					hi there</div>
 
 
@@ -290,8 +307,8 @@
 	<!-- footer  -->
 	<div class="border-4 border-orange-400 border-back-color"></div>
 
-	<footer class="bg-white p-4 text-white" aria-labelledby="footer-heading">
-		<div class="mx-auto max-w-7xl px-6 pb-4 sm:pt-24 lg:px-16 pt-2 lg:pt-12 text-black">
+	<footer class="bg-white  text-white" aria-labelledby="footer-heading">
+		<div class="mx-auto max-w-7xl lg:px-6 px-4 pb-4 pt-12 text-black">
 			<div class="">
 				<div class="flex flex-col lg:flex-row justify-between lg:gap-20 gap-12">
 
