founder section alignment

--- a/about.html
+++ b/about.html
@@ -260,9 +260,9 @@
 
     <!-- about founder -->
     <section>
-        <div class="container mx-auto flex flex-col lg:flex-row justify-center items-center my-20 px-12">
+        <div class="container mx-auto flex flex-col lg:flex-row justify-center items-center my-20 lg:px-12 px-4">
             <div class="lg:w-6/12 w-full">
-                <img class=" p-4" src="public/image/team/image 109.png" alt="">
+                <img class=" p-8" src="public/image/team/image 109.png" alt="">
             </div>
 
             <div class="w-10/12 lg:px-8 text-justify py-4 lg:py-0  pt-8">
