--- a/index.html
+++ b/index.html
@@ -83,9 +83,15 @@
 	<section>
 		<div class="container mx-auto lg:px-6 px-6 lg:py-12 py-4 bg-gray-50 text-gray-800  lg:text-left  mt-4 lg:mt-0">
 			<div class="mt-12 lg:mt-0 ">
-				<h1 class="lg:text-4xl font-bold capitalize text-lg pb-4 lg:px-12">
-					Empowering Lives, Transforming Communities!
+				<h1 class="lg:text-4xl font-bold capitalize text-lg pb-4 lg:px-12 text-center">
+					Empowering Lives, Transforming Communities
 				</h1>
+
+				<p class="text-center pb-4 font-semibold lg:w-1/2 w-4/5 mx-auto"><i>
+						We often forget that the much-sought after development is often intertwined with the destruction
+						of
+						the earth and the lives that depend on the ecosystem.</i>
+				</p>
 				<p class="mx-auto text-justify mb-6 lg:px-12  ">
 					The story of our organisation, Sachcha Prayas Sanstha is one that is rooted in the wide-spread
 					displacement caused by the construction of the Bargi dam in Jabalpur, Maharashtra. People from over
@@ -183,8 +189,28 @@
 	</section>
 	<!--mission end  -->
 
+
+
+	<!-- donate button -->
+	<section>
+		<div class="mx-auto flex px-2 py-2 donate w-56 my-16 shadow-xl rounded-lg ">
+			<a href="donate.html" class="flex">
+				<h1 class="text-3xl text-white font-bold flex items-center px-2">Donate</h1>
+				<img class="w-20 h-16 px-2" src="public/image/donate-logo.png" alt="">
+			</a>
+		</div>
+	</section>
+
+
+	<!-- <section class="flex justify-center lg:my-8 my-4 mx-4 bg-gray-200">
+		<img class="shadow-2xl rounded-md h-3/4 w-3/4 max-w-4xl" src="./public/image/donate-hero.jpg" alt="donate-hero">
+	</section> -->
+	<!-- donate button end -->
+
+
+
 	<!-- partners -->
-	<div class="container mx-auto p-8 text-center border-2 shadow-md w-max">
+	<div class=" mx-auto p-8 text-center border-2 shadow-md w-max">
 		<h1 class="text-3xl font-bold mb-6">Our Partners</h1>
 		<div class="grid  lg:grid-cols-6 sm:grid-cols-3 gap-8 ">
 			<!-- Partner Logo 1 -->
@@ -222,19 +248,6 @@
 		</div>
 	</div>
 	<!-- partners end -->
-
-
-
-	<!-- donate button -->
-	<section>
-		<div class="mx-auto flex px-2 py-2 donate w-56 my-5 shadow-xl rounded-lg">
-			<a href="donate.html" class="flex">
-				<h1 class="text-3xl text-white font-bold flex items-center px-2">Donate</h1>
-				<img class="w-20 h-16 px-2" src="public/image/donate-logo.png" alt="">
-			</a>
-		</div>
-	</section>
-	<!-- donate button end -->
 
 
 	<!-- image section -->
