--- a/about.html
+++ b/about.html
@@ -118,42 +118,16 @@
                     Our Story
                 </h1>
                 <p class="mx-auto text-justify text-base mb-6  lg:px-12">
-                    The roots of Sachcha Prayas Sanstha's dates back to the concept of providing tailoring training in
-                    Gram Panchayat Harduli Bargi Nagar during 2007-2008. It was officially registered under the Society
-                    Act in November, 2009. Despite limited financial resources and infrastructure, the organisation's
-                    unwavering commitment drove its initial efforts.
+                    Sachcha Prayas Sanstha's journey traces back to the idea of providing tailoring training in Gram Panchayat Harduli Bargi Nagar during 2007-2008. Officially registered under the Society Act on November 17, 2009, our organisation embarked on its mission with a steadfast commitment despite initial resource limitations.
 
-                    The organisation's mission addresses the need to empower women in rural areas, enabling them to earn
-                    a livelihood while staying in their communities. It aims to enhance economic autonomy and
-                    recognition for women who often shoulder household and agricultural responsibilities.
-
-
-                    Despite starting with minimal planning, the organisation's credibility, founder's reputation and
-                    community support contributed to its early success.
-
-                    Milestones for the organisation included gaining support from Women and Child Development
-                    Department, YMCA Sanstha Jabalpur, and other organisations. Successful transformations of women's
-                    lives through skill acquisition and empowerment marked significant achievements.
-
-                    Currently, Sachcha Prayas Sanstha continues to focus on women's empowerment and child rights
-                    advocacy. It collaborates with various organisations like Madhya Pradesh Sustainable Development and
-                    numerous government and non-government entities.
-
-                    The projected goal for the organisation is to make 200 women self-reliant through
-                    employment-oriented initiatives and create a positive atmosphere for child rights advocacy in at
-                    least 10 Gram Panchayats.
-
-                    The organisation faces challenges, including lack of technical staff, resources, and regular
-                    funding. Efforts are underway to address these issues and improve documentation.
-
-                    Enhanced accessibility would greatly benefit the marginalised communities, especially displaced
-                    families, tribal, SC, ST, and backward-class individuals, targeted by Sachcha Prayas Sanstha's
-                    initiatives.
                 </p>
             </div>
     </section>
     <!-- end out mission -->
+    <div class="flex justify-center">
 
+        <div class="border-2 border-orange-400 border-back-color w-1/2 "></div>
+    </div>
 
     <!-- origin and commitment -->
     <section>
@@ -182,7 +156,10 @@
     </section>
     <!-- end origin and commitment -->
 
+    <div class="flex justify-center">
 
+        <div class="border-2 border-orange-400 border-back-color w-1/2 "></div>
+    </div>
     <!-- early success and mile stone -->
     <section>
         <div class="container mx-auto lg:px-6 px-4 lg:py-12 py-4  lg:text-left  mt-4 lg:mt-0">
@@ -204,8 +181,10 @@
             </div>
     </section>
     <!--end early success and mile stone -->
+            <div class="flex justify-center">
 
-
+                <div class="border-2 border-orange-400 border-back-color w-1/2 "></div>
+            </div>
     <!-- Current Scenario and Challenges -->
     <section>
         <div class="container mx-auto lg:px-6 px-4 lg:py-12 py-4   lg:text-left  mt-4 lg:mt-0">
@@ -229,37 +208,83 @@
 
 
     <!-- How You Can Help -->
-    <section>
-        <div class="bg-gray-50 p-8 py-24 rounded-lg shadow-lg flex flex-col items-center">
-            <h1 class="text-3xl font-semibold mb-6 text-center">How You Can Help?</h1>
-            <div class=" flex lg:flex-nowrap flex-wrap gap-8 lg:px-32">
-                <!-- div-1 -->
-                <div class="lg:w-1/3 p-4 bg-blue-200 rounded-lg text-center">
-                    <h2 class="text-xl font-semibold mb-2">Volunteer</h2>
-                    <p>Individuals can become members of our organisation, attend our programs, and contribute their
-                        valuable insights.</p>
+    <div class="px-6 py-12 back-color text-gray-800 lg:text-left -700 ">
+        <!-- need to add margin below -->
+        <div class="container mx-auto xl:px-20 border-2 border-green-700 m-3.5">
+
+            <div class="grid lg:grid-cols-2 gap-4 flex items-center justify-center mb-2 ">
+                <div>
+                    <h1
+                        class="heading-font-family max-w-sm mb-4 text-3xl font-bold  tracking-normal leading-9  lg:text-5xl  text-start text-color">
+                        HOW
+                    </h1>
+                    <h1
+                        class="heading-font-family max-w-sm mb-4 text-3xl font-bold tracking-normal leading-9  lg:text-5xl  text-start text-color">
+
+                        CAN YOU
+                    </h1>
+                    <h1
+                        class="heading-font-family max-w-sm mb-4 text-3xl font-bold tracking-normal leading-9  lg:text-5xl  text-start text-color">
+
+                        HELP?</h1>
                 </div>
 
-                <!-- div-2 -->
-                <div class="lg:w-1/3 p-4 bg-green-200 rounded-lg text-center">
-                    <h2 class="text-xl font-semibold mb-2">Spread Awareness</h2>
-                    <p>Sharing our work on social platforms can help us reach a wider audience.</p>
-                </div>
+                <div class="lg:mt-0">
 
-                <!-- div-3 -->
-                <div class="lg:w-1/3 p-4 bg-yellow-200 rounded-lg text-center">
-                    <h2 class="text-xl font-semibold mb-2">Donate</h2>
-                    <p>Your financial support can further strengthen our initiatives, allowing us to provide better
-                        resources and opportunities for the marginalized communities we serve. Together, we can create
-                        lasting change and uplift the lives of those in need.</p>
+                    <!-- <p class="paragraphs-font max-w-2xl font-medium text-base p-2">
+                        Sachcha Prayas Sanstha is one that is rooted in the wide-spread displacement caused by the construction of the Bargi dam in Jabalpur, Maharashtra. People from over 184 villages were uprooted and displaced, causing a loss of homes and livelihood. 
+                    : </p> -->
+
+
+                    <div
+                        class="grid lg:grid-cols-3 md:grid-cols-3 gap-2 flex items-center justify-center gap-x-6 p-2  ">
+
+                        <div class="flex flex-col justify-start items-center ">
+                            <img src="./public/image/icon/volunteer.png"
+                                alt="Lack of understanding of" class="icon-size h-20">
+                            <h3 class="heading-font-family font-bold text-sm text-color pt-2 text-center">Volunteer</h3>
+                            <p>
+                                Individuals can become members of our organisation, attend our programs, and contribute their valuable insights.
+                            </p>
+                        </div>
+
+                        <div class="flex flex-col justify-start items-center">
+                            <img src="./public/image/icon/love.png"
+                                alt="Inability to
+                                exercise and enforce their right" class="icon-size h-20">
+                            <h3 class="heading-font-family font-bold text-sm text-color pt-2 text-center">Spread Awareness</h3>
+                            <p>
+                                Sharing our work on social platforms can help us reach a wider audience.
+                            </p>
+                        </div>
+
+                        <div class="flex flex-col justify-start items-center">
+                            <img src="./public/image/icon/donation.png"
+                                alt="Failure of the state to deliver justice" class="icon-size h-20">
+                            <h3 class="heading-font-family font-bold text-sm text-color pt-2 text-center">Donate</h3>
+                            <p>
+                                Your help makes us better at helping people who need it. Let's work together to make a difference
+                            </p>
+
+                        </div>
+
+                    </div>
+                    <p class="paragraphs-font max-w-2xl font-medium text-base mt-3 p-2">
+                        Help us bring more change in the Society.
+                    </p>
                 </div>
             </div>
+
+
+
         </div>
-    </section>
+    </div>
+</section>
+
     <!-- end How You Can Help -->
 
     <!-- about founder -->
-    <section>
+    <!-- <section>
         <div class="container mx-auto flex flex-col lg:flex-row justify-center items-center my-20 lg:px-12 px-4">
             <div class="lg:w-6/12 w-full">
                 <img class=" p-8" src="public/image/team/image 109.png" alt="">
@@ -301,7 +326,7 @@
 
             </div>
         </div>
-    </section>
+    </section> -->
 
 
 
