updated gallary and holw

--- a/about.html
+++ b/about.html
@@ -208,9 +208,9 @@
 
 
     <!-- How You Can Help -->
-    <div class="px-6 py-12 back-color text-gray-800 lg:text-left -700 ">
+    <div class="px-6 py-12 back-color text-gray-800 lg:text-left -700 bg-emerald-300">
         <!-- need to add margin below -->
-        <div class="container mx-auto xl:px-20 border-2 border-green-700 m-3.5">
+        <div class="container mx-auto xl:px-20 ">
 
             <div class="grid lg:grid-cols-2 gap-4 flex items-center justify-center mb-2 ">
                 <div>
