--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
 					Empowering Lives, Transforming Communities
 				</h1>
 
-				<p class="text-center pb-4 font-semibold lg:w-1/2 w-4/5 mx-auto"><i>
+				<p class="text-center font-semibold lg:w-1/2 w-4/5 mx-auto p-8"><i>
 						We often forget that the much-sought after development is often intertwined with the destruction
 						of
 						the earth and the lives that depend on the ecosystem.</i>
