--- a/new-gallery.html
+++ b/new-gallery.html
@@ -109,6 +109,88 @@
 
 
     <!-- gallery -->
+    <div class="grid lg:grid-cols-3 md:grid-cols-2 gap-x-24 gap-y-12 lg:px-12">
+
+
+        <div class="">
+            <a class="relative block bg-gray-900 group" href="##">
+                <img class="absolute inset-0 object-coverw-3/5 group-hover:opacity-50"
+                    src="./public/image/gallery/gallery-img-10.JPG" />
+                <div class="relative p-5">
+                    <div class="px-2">
+
+                        <div class="transition-all transform
+                                    translate-x-0 opacity-0
+                                    group-hover:opacity-100
+                                    group-hover:translate-x-8">
+                            <div class="p-4">
+                                <p class="text-lg text-white pb-8 text-start">
+                                    Empowering marginalised communities to access justice and solve justice
+                                    problems through legal aid and capacity building.
+                                </p>
+                                <button class="px-4 py-2 text-sm
+                                                text-white bg-red-800">
+                                    Access to Justice program
+                                </button>
+                            </div>
+                        </div>
+
+                    </div>
+                </div>
+            </a>
+        </div>
+        
+        <a class="relative block bg-gray-900 group" href="##">
+            <img class="absolute inset-0 object-coverw-3/5 group-hover:opacity-50"
+                src="./public/image/gallery/gallery-img-10.JPG" />
+            <div class="relative p-5">
+                <div class="px-2">
+
+                    <div class="transition-all transform
+                                translate-x-0 opacity-0
+                                group-hover:opacity-100
+                                group-hover:translate-x-8">
+                        <div class="p-4">
+                            <p class="text-lg text-white pb-8 text-start">
+                                Empowering marginalised communities to access justice and solve justice
+                                problems through legal aid and capacity building.
+                            </p>
+                            <button class="px-4 py-2 text-sm
+                                            text-white bg-red-800">
+                                Access to Justice program
+                            </button>
+                        </div>
+                    </div>
+
+                </div>
+            </div>
+        </a>
+        <a class="relative block bg-gray-900 group" href="##">
+            <img class="absolute inset-0 object-coverw-3/5 group-hover:opacity-50"
+                src="./public/image/gallery/gallery-img-10.JPG" />
+            <div class="relative p-5">
+                <div class="px-2">
+
+                    <div class="transition-all transform
+                                translate-x-0 opacity-0
+                                group-hover:opacity-100
+                                group-hover:translate-x-8">
+                        <div class="p-4">
+                            <p class="text-lg text-white pb-8 text-start">
+                                Empowering marginalised communities to access justice and solve justice
+                                problems through legal aid and capacity building.
+                            </p>
+                            <button class="px-4 py-2 text-sm
+                                            text-white bg-red-800">
+                                Access to Justice program
+                            </button>
+                        </div>
+                    </div>
+
+                </div>
+            </div>
+        </a>
+    </div>
     <div class="bg-white">
         <!-- <h2 class="pt-12 text-center text-3xl">Gallery</h2> -->
 
