updated home page

--- a/index.html
+++ b/index.html
@@ -191,20 +191,30 @@
 
 
 
-	<!-- donate button -->
-	<section>
-		<div class="mx-auto flex px-2 py-2 donate w-56 my-16 shadow-xl rounded-lg ">
-			<a href="donate.html" class="flex">
-				<h1 class="text-3xl text-white font-bold flex items-center px-2">Donate</h1>
-				<img class="w-20 h-16 px-2" src="public/image/donate-logo.png" alt="">
-			</a>
+	<!--donation  -->
+	<section class="flex justify-center">
+		<div class=" container max-w-6xl  lg:px-16 px-4 py-12 border-2 border-emerald-900 my-16">
+	
+		  <dl class="grid  grid-cols-1 gap-x-4 gap-y-6   md:grid-cols-2 lg:grid-cols-2 ">
+			<!-- Mission -->
+			<div class="">
+			  <dd class="mt-2 text-justify leading-7 text-gray-700 ">Lorem ipsum, dolor sit amet consectetur
+				adipisicing elit. Labore ratione blanditiis magni aspernatur maiores excepturi, modi atque
+				repudiandae facilis ipsa consequatur voluptas voluptatem eos harum. Consequuntur voluptate
+				consequatur blanditiis eaque!
+			  </dd>
+			</div>
+	
+			<!-- vision -->
+			<div class="flex lg:justify-end justify-center">
+			  <img class="w-40 " src="public/image/icon/donation.png" alt="">
+			</div>
+		  </dl>
 		</div>
-	</section>
+	  </section>
 
 
-	<!-- <section class="flex justify-center lg:my-8 my-4 mx-4 bg-gray-200">
-		<img class="shadow-2xl rounded-md h-3/4 w-3/4 max-w-4xl" src="./public/image/donate-hero.jpg" alt="donate-hero">
-	</section> -->
+
 	<!-- donate button end -->
 
 
