added Donation heading

--- a/index.html
+++ b/index.html
@@ -192,32 +192,31 @@
 
 
 	<!-- donate button -->
-	<!--donation  -->
-	<section class="flex justify-center">
+	<section class="flex justify-center lg:p-0 px-4">
+
 		<div class=" container max-w-6xl  lg:px-16 px-4 py-12 border-2 border-emerald-900 my-16">
-	
-		  <dl class="grid  grid-cols-1 gap-x-4 gap-y-6   md:grid-cols-2 lg:grid-cols-2">
-			<!-- Mission -->
-			<div class="">
-			  <dd class="mt-2 text-justify leading-7 text-gray-700 ">Lorem ipsum, dolor sit amet consectetur
-				adipisicing elit. Labore ratione blanditiis magni aspernatur maiores excepturi, modi atque
-				repudiandae facilis ipsa consequatur voluptas voluptatem eos harum. Consequuntur voluptate
-				consequatur blanditiis eaque!
-			  </dd>
-			</div>
-	
-			<!-- vision -->
-			<div class="flex lg:justify-end justify-center">
-			  <img class="w-40 " src="public/image/icon/image 119 (1).png" alt="">
-	
-			  
-			</div>
-		  </dl>
+			<!-- text -->
+			<h1 class="font-bold text-3xl">Support Us</h1>
+			<dl class="grid  grid-cols-1 gap-x-4 gap-y-6   md:grid-cols-2 lg:grid-cols-2">
+				<div class="">
+					<dd class="mt-2 text-justify leading-7 text-gray-700 ">Lorem ipsum, dolor sit amet consectetur
+						adipisicing elit. Labore ratione blanditiis magni aspernatur maiores excepturi, modi atque
+						repudiandae facilis ipsa consequatur voluptas voluptatem eos harum. Consequuntur voluptate
+						consequatur blanditiis eaque!
+					</dd>
+				</div>
+				<!-- image -->
+				<a href="donate.html">
+					<div class="flex lg:justify-end justify-center">
+						<img class="w-40 " src="public/image/icon/image 119 (1).png" alt="">
+					</div>
+				</a>
+			</dl>
 		</div>
-	  </section>
+	</section>
 
 
-	
+
 
 
 
