changed donation logo and added new image section

--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@
 				<!-- image -->
 				<a href="donate.html">
 					<div class="flex lg:justify-end justify-center">
-						<img class="w-40 " src="public/image/icon/image 119 (1).png" alt="">
+						<img class="w-40 " src="public/image/icon/Group 7.png" alt="donation logo">
 					</div>
 				</a>
 			</dl>
@@ -262,7 +262,7 @@
 
 
 	<!-- image section -->
-	<div class="container mx-auto ">
+	<!-- <div class="container mx-auto ">
 		<div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-8 py-12 lg:px-16 px-4">
 			<div class="group relative">
 				<div
@@ -323,8 +323,201 @@
 
 			</div>
 		</div>
-	</div>
-	<!-- image section end-->
+	</div> -->
+	<!-- image section end -->
+
+
+	<!-- Gallery Card Section  -->
+	<section class="bg-white">
+
+		<div class="lg:px-20 lg:py-8  md:px-24 bg-white text-gray-800 text-center lg:text-left p-4  ">
+
+			<!-- animation card 1 -->
+			<div class="grid lg:grid-cols-3 md:grid-cols-2 gap-x-20 gap-y-12 lg:px-12">
+
+				<!-- div-1 -->
+				<div class="">
+					<a class="relative block  h-full bg-gray-900 group" href="##">
+						<img class="absolute inset-0 object-cover  w-full h-full group-hover:opacity-50"
+							src="public/image/gallery/gallery-img-30.JPG" />
+						<div class="relative p-5">
+							<div class=" px-2">
+
+								<div class="transition-all transform
+											translate-x-0 opacity-0
+											group-hover:opacity-100
+											group-hover:translate-x-8">
+
+									<div class="pt-12">
+										<p class="text-lg text-white py-8 text-start">
+											WOMEN EMPOWERMENT
+										</p>
+										<button class="px-4 py-2 text-sm
+														text-white bg-red-800">
+											Click Me
+										</button>
+									</div>
+								</div>
+							</div>
+						</div>
+					</a>
+				</div>
+
+
+				<!-- div-2 -->
+				<div class="">
+					<a class="relative block  h-full bg-gray-900 group" href="##">
+						<img class="absolute inset-0 object-cover  w-full h-full group-hover:opacity-50"
+							src="public/image/gallery/gallery-img-23.JPG" />
+						<div class="relative p-5">
+							<div class=" px-2">
+
+								<div class="transition-all transform
+											translate-x-0 opacity-0
+											group-hover:opacity-100
+											group-hover:translate-x-8">
+
+									<div class="pt-12">
+										<p class="text-lg text-white py-8 text-start">
+											CHILD DEVELOPMENT
+										</p>
+										<button class="px-4 py-2 text-sm
+														text-white bg-red-800">
+											Click Me
+										</button>
+									</div>
+								</div>
+
+							</div>
+						</div>
+					</a>
+				</div>
+
+
+				<!-- div-3 -->
+				<div class="">
+					<a class="relative block  h-full bg-gray-900 group" href="##">
+						<img class="absolute inset-0 object-cover  w-full h-full group-hover:opacity-50"
+							src="public/image/gallery/gallery-img-23.JPG" />
+						<div class="relative p-5">
+							<div class=" px-2">
+
+								<div class="transition-all transform
+											translate-x-0 opacity-0
+											group-hover:opacity-100
+											group-hover:translate-x-8">
+
+									<div class="pt-12">
+										<p class="text-lg text-white py-8 text-start">
+											SPECIALLY ABELED
+										</p>
+										<button class="px-4 py-2 text-sm
+														text-white bg-red-800">
+											Click Me
+										</button>
+									</div>
+								</div>
+
+							</div>
+						</div>
+					</a>
+				</div>
+
+
+				<!-- div-4 -->
+				<div class="">
+					<a class="relative block  h-full bg-gray-900 group" href="##">
+						<img class="absolute inset-0 object-cover  w-full h-full group-hover:opacity-50"
+							src="public/image/gallery/gallery-img-23.JPG" />
+						<div class="relative p-5">
+							<div class=" px-2">
+
+								<div class="transition-all transform
+											translate-x-0 opacity-0
+											group-hover:opacity-100
+											group-hover:translate-x-8">
+
+									<div class="pt-12">
+										<p class="text-lg text-white py-8 text-start">
+											LEGAL AID </p>
+										<button class="px-4 py-2 text-sm
+														text-white bg-red-800">
+											Click Me
+										</button>
+									</div>
+								</div>
+
+							</div>
+						</div>
+					</a>
+				</div>
+
+
+				<!-- div-5 -->
+				<div class="">
+					<a class="relative block  h-full bg-gray-900 group" href="##">
+						<img class="absolute inset-0 object-cover  w-full h-full group-hover:opacity-50"
+							src="public/image/gallery/gallery-img-23.JPG" />
+						<div class="relative p-5">
+							<div class=" px-2">
+
+								<div class="transition-all transform
+											translate-x-0 opacity-0
+											group-hover:opacity-100
+											group-hover:translate-x-8">
+
+									<div class="pt-12">
+										<p class="text-lg text-white py-8 text-start">
+											HEALTH EDUCATION
+										</p>
+										<button class="px-4 py-2 text-sm
+														text-white bg-red-800">
+											Click Me
+										</button>
+									</div>
+								</div>
+
+							</div>
+						</div>
+					</a>
+				</div>
+
+
+				<!-- div-6 -->
+				<div class="">
+					<a class="relative block  h-full bg-gray-900 group" href="##">
+						<img class="absolute inset-0 object-cover  w-full h-full group-hover:opacity-50"
+							src="public/image/gallery/gallery-img-23.JPG" />
+						<div class="relative p-5">
+							<div class=" px-2">
+
+								<div class="transition-all transform
+											translate-x-0 opacity-0
+											group-hover:opacity-100
+											group-hover:translate-x-8">
+
+									<div class="pt-12">
+										<p class="text-lg text-white py-8 text-start">
+											EnvRestoration
+										</p>
+										<button class="px-4 py-2 text-sm
+														text-white bg-red-800">
+											Click Me
+										</button>
+									</div>
+								</div>
+
+							</div>
+						</div>
+					</a>
+				</div>
+
+				<!--  -->
+			</div>
+		</div>
+	</section>
+	<!-- Gallery end -->
+
 
 
 
