--- a/new-gallery.html
+++ b/new-gallery.html
@@ -107,52 +107,7 @@
     <!-- **** Header section end *** -->
 
 
-    <!-- gallery -->
-    <!-- <div class="grid lg:grid-cols-3 md:grid-cols-2 gap-x-24 gap-y-12 lg:px-12 my-20">
-    <div class="bg-white">
-        <div class="mx-auto max-w-2xl px-8 py-8 sm:px-6 sm:py-24 lg:max-w-7xl lg:px-8">
-
-            <div class="grid grid-cols-1 gap-x-6 gap-y-14 sm:grid-cols-2 lg:grid-cols-3 xl:grid-cols-3 xl:gap-x-20">
-                <a href="./Gallery/women-empowerment.html" class="group border border-color rounded-lg shadow-xl">
-                    <div
-                        class="aspect-h-1 aspect-w-1 w-full overflow-hidden xl:aspect-h-8 xl:aspect-w-7 shadow-xl bg-white rounded-t-lg">
-                        <img src="public/image/gallery/gallery-img-1.JPG"
-                            alt="Tall slender porcelain bottle with natural clay textured body and cork stopper."
-                            class="h-full w-full object-cover object-center  ">
-                    </div>
-                    <h3 class="mt-4 text-xl text-center">Women Empowerment</h3>
-                </a>
-
-
-                <a href="./Gallery/child-development.html" class="group border border-color rounded-lg shadow-xl">
-                    <div
-                        class="aspect-h-1 aspect-w-1 w-full overflow-hidden xl:aspect-h-8 xl:aspect-w-7 shadow-xl bg-white rounded-t-lg">
-                        <img src="public/image/gallery/gallery-img-3.JPG"
-                            alt="Tall slender porcelain bottle with natural clay textured body and cork stopper."
-                            class="h-full w-full object-cover object-center  ">
-                    </div>
-                    <h3 class="mt-4 text-xl text-center">Child Development</h3>
-                </a>
-
-                <a href="./Gallery/awards-acheivements.html" class="group border border-color rounded-lg shadow-xl">
-                    <div
-                        class="aspect-h-1 aspect-w-1 w-full overflow-hidden xl:aspect-h-8 xl:aspect-w-7 shadow-xl bg-white rounded-t-lg">
-                        <img src="public/image/certificates/certi 9.jpg"
-                            alt="Tall slender porcelain bottle with natural clay textured body and cork stopper."
-                            class="h-full w-full object-cover object-center  ">
-                    </div>
-                    <h3 class="mt-4 text-xl text-center">Awards and Acheivements</h3>
-                </a>
-            </div>
-        </div>
-    </div>
-   
-     -->
-
-
-
-
-    <!-- Card Section  -->
+    <!-- Gallery Card Section  -->
     <section class="bg-white">
 
         <div class="lg:px-20 lg:py-8  md:px-24 bg-white text-gray-800 text-center lg:text-left p-4  ">
@@ -401,7 +356,7 @@
             </div>
         </div>
     </section>
-
+    <!-- Gallery end -->
 
     <!-- footer  -->
     <div class="border-4 border-orange-400 border-back-color"></div>
