--- a/new-gallery.html
+++ b/new-gallery.html
@@ -119,7 +119,7 @@
                 <div class="">
                     <a class="relative block  h-full bg-gray-900 group" href="##">
                         <img class="absolute inset-0 object-cover  w-full h-full group-hover:opacity-50"
-                            src="public/image/gallery/gallery-img-30.JPG" />
+                            src="public/image/gallery/ग्राम सभा में ग्रामीणों को सोशल ऑडिट के बारे में बताया गया .jpg" />
                         <div class="relative p-5">
                             <div class=" px-2">
 
@@ -132,10 +132,12 @@
                                         <p class="text-lg text-white py-8 text-start">
                                             WOMEN EMPOWERMENT
                                         </p>
+
                                         <button class="px-4 py-2 text-sm
                                                             text-white bg-red-800">
-                                            Click Me
+                                            See More
                                         </button>
+
                                     </div>
                                 </div>
                             </div>
@@ -148,7 +150,7 @@
                 <div class="">
                     <a class="relative block  h-full bg-gray-900 group" href="##">
                         <img class="absolute inset-0 object-cover  w-full h-full group-hover:opacity-50"
-                            src="public/image/gallery/gallery-img-23.JPG" />
+                            src="public/image/gallery/बाल सुरक्षा पर भोपाल में अर्पण संस्था के साथ आयोजित कार्यशाला.jpg" />
                         <div class="relative p-5">
                             <div class=" px-2">
 
@@ -163,7 +165,7 @@
                                         </p>
                                         <button class="px-4 py-2 text-sm
                                                             text-white bg-red-800">
-                                            Click Me
+                                            See More
                                         </button>
                                     </div>
                                 </div>
@@ -178,7 +180,7 @@
                 <div class="">
                     <a class="relative block  h-full bg-gray-900 group" href="##">
                         <img class="absolute inset-0 object-cover  w-full h-full group-hover:opacity-50"
-                            src="public/image/gallery/gallery-img-23.JPG" />
+                            src="public/image/gallery/राज्य विधिक सेवा की मदद से दिव्यांग जनों के लिए विशेष शिविर का आयोजन.jpg" />
                         <div class="relative p-5">
                             <div class=" px-2">
 
@@ -193,7 +195,7 @@
                                         </p>
                                         <button class="px-4 py-2 text-sm
                                                             text-white bg-red-800">
-                                            Click Me
+                                            See More
                                         </button>
                                     </div>
                                 </div>
@@ -204,11 +206,11 @@
                 </div>
 
 
-                <!-- div-2 -->
+                <!-- div-4 -->
                 <div class="">
                     <a class="relative block  h-full bg-gray-900 group" href="##">
                         <img class="absolute inset-0 object-cover  w-full h-full group-hover:opacity-50"
-                            src="public/image/gallery/gallery-img-23.JPG" />
+                            src="public/image/gallery/थाने में महिलाओं के लिए लीगल लिटरेसी कैंप का आयोजन.jpg" />
                         <div class="relative p-5">
                             <div class=" px-2">
 
@@ -222,7 +224,7 @@
                                             LEGAL AID </p>
                                         <button class="px-4 py-2 text-sm
                                                             text-white bg-red-800">
-                                            Click Me
+                                            See More
                                         </button>
                                     </div>
                                 </div>
@@ -233,11 +235,11 @@
                 </div>
 
 
-                <!-- div-2 -->
+                <!-- div-5 -->
                 <div class="">
                     <a class="relative block  h-full bg-gray-900 group" href="##">
                         <img class="absolute inset-0 object-cover  w-full h-full group-hover:opacity-50"
-                            src="public/image/gallery/gallery-img-23.JPG" />
+                            src="public/image/gallery/विद्यालयों में बाल अधिकारों के मुद्दों पर आयोजित कार्यक्रम 2.jpg" />
                         <div class="relative p-5">
                             <div class=" px-2">
 
@@ -250,10 +252,12 @@
                                         <p class="text-lg text-white py-8 text-start">
                                             HEALTH EDUCATION
                                         </p>
+
                                         <button class="px-4 py-2 text-sm
                                                             text-white bg-red-800">
-                                            Click Me
+                                            See More
                                         </button>
+
                                     </div>
                                 </div>
 
@@ -263,11 +267,11 @@
                 </div>
 
 
-                <!-- div-2 -->
+                <!-- div-6 -->
                 <div class="">
                     <a class="relative block  h-full bg-gray-900 group" href="##">
                         <img class="absolute inset-0 object-cover  w-full h-full group-hover:opacity-50"
-                            src="public/image/gallery/gallery-img-23.JPG" />
+                            src="public/image/gallery/संस्था द्वारा चलाया गया पौधारोपण अभियान.jpg" />
                         <div class="relative p-5">
                             <div class=" px-2">
 
@@ -293,11 +297,11 @@
                 </div>
 
 
-                <!-- div-2 -->
+                <!-- div-7 -->
                 <div class="">
                     <a class="relative block  h-full bg-gray-900 group" href="##">
                         <img class="absolute inset-0 object-cover  w-full h-full group-hover:opacity-50"
-                            src="public/image/gallery/gallery-img-23.JPG" />
+                            src="public/image/news/news-img10.jpg" />
                         <div class="relative p-5">
                             <div class=" px-2">
 
@@ -323,11 +327,11 @@
                 </div>
 
 
-                <!-- div-2 -->
+                <!-- div-8 -->
                 <div class="">
                     <a class="relative block  h-full bg-gray-900 group" href="##">
                         <img class="absolute inset-0 object-cover  w-full h-full group-hover:opacity-50"
-                            src="public/image/gallery/gallery-img-23.JPG" />
+                            src="public/image/certificates/certi 2.jpg" />
                         <div class="relative p-5">
                             <div class=" px-2">
 
@@ -344,6 +348,7 @@
                                             text-white bg-red-800">
                                             Click Me
                                         </button>
+
                                     </div>
                                 </div>
 
@@ -357,6 +362,7 @@
         </div>
     </section>
     <!-- Gallery end -->
+
 
     <!-- footer  -->
     <div class="border-4 border-orange-400 border-back-color"></div>
